# easy-gltf

./: Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: build.yml  publish.yml
src/: lib.rs  utils.rs
src/scene/: camera.rs  light.rs  mod.rs
src/scene/model/: material.rs  mod.rs  mode.rs  vertex.rs
src/scene/model/material/: emissive.rs  mapper.rs  mod.rs  normal.rs  occlusion.rs  pbr.rs
src/utils/: gltf_data.rs  mod.rs
tests/: cube.glb  cube_color.glb
