[package]
name = "minetest-gltf"
version = "1.1.1"
authors = ["Florian Amsallem <florian.amsallem@epita.fr>", "jordan4ibanez"]
description = "glTF 2.0 loader with an easy to use output"
edition = "2021"
license = "MIT"
keywords = ["glTF", "3D", "asset", "model", "minetest"]
exclude = [".github/"]

[features]
default = []
names = ["gltf/names"]
extras = ["gltf/extras"]

[dependencies]
cgmath = "0.18.0"
gltf = { version = "1.3.0", features = ["KHR_lights_punctual"] }
image = "0.24.7"
base64 = "0.21.5"
