[package]
name = "easy-gltf"
version = "1.1.2"
authors = ["Florian Amsallem <florian.amsallem@epita.fr>"]
description = "glTF 2.0 loader with an easy to use output"
documentation = "https://docs.rs/easy-gltf"
repository = "https://github.com/flomonster/easy-gltf"
homepage = "https://github.com/flomonster/easy-gltf"
edition = "2018"
license = "MIT"
keywords = ["glTF", "3D", "asset", "model", "scene"]
exclude = [".github/"]

[features]
default = []
names = ["gltf/names"]
extras = ["gltf/extras"]

[dependencies]
cgmath = "0.18.0"
gltf = { version = "1.4.0", features = ["KHR_lights_punctual"] }
image = "0.25.0"
base64 = "0.22.0"
